<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>两广线</item>
        <item>望京线</item>
        <item>天桥线</item>
        <item>卢沟桥线</item>
        <item>东线</item>
        <item>中线</item>
        <item>南线</item>
        <item>燕山线</item>
        <item>西线</item>
        <item>学院线</item>
        <item>石景山线</item>
        <item>通州线</item>
        <item>良乡大学城</item>
        <item>大兴线</item>
        <item>高校专线</item>
        <item>晚班班车一线</item>
        <item>晚班班车二线</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
        <item>@drawable/directions_bus</item>
    </array>

    <!-- bus line code name -->
    <string-array name="bus_line_code_name">
        <item>20130715142458370693,两广线</item>
        <item>20130715142713247696,望京线</item>
        <item>20130715155703400950,天桥线</item>
        <item>20130715155720747953,卢沟桥线</item>
        <item>20130715155740307956,东线</item>
        <item>20130715171927950230,中线</item>
        <item>20130715171942480233,南线</item>
        <item>20130715171958527236,燕山线</item>
        <item>20130716093032010508,西线</item>
        <item>20130716093050120511,学院线</item>
        <item>20130716093137573517,石景山线</item>
        <item>20130716093107980514,通州线</item>
        <item>20130716104418027885,良乡大学城</item>
        <item>20130716104435073888,大兴线</item>
        <item>20130723145451827144,高校专线</item>
        <item>20131025101122857594,晚班班车一线</item>
        <item>20131025111312933604,晚班班车二线</item>
    </string-array>

    <string name="app_name">东方时尚班车</string>
    <string name="stop_name">车站名</string>
    <string name="action_settings">设置</string>

    <string name="hello_world">Hello world!</string>
    <string name="class_07">07:00 上课经停时间：</string>
    <string name="class_09">09:00 上课经停时间：</string>
    <string name="class_13">13:00 上课经停时间：</string>
    <string name="class_17">17:00 上课经停时间：</string>
    <string name="stop_desc">位置说明：</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="message_zoom_touch_expand">点击图片看大图</string>
    <string name="description_zoom_touch_close">点击图片返回</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_settings_sync">下载线路数据</string>

    <string name="sync_data">下载线路数据</string>
    <string name="clear_cache">清除图片缓存</string>
    <string name="clear_cache_question">确实要清除缓存数据？</string>
    <string name="clear_cache_yes">确定</string>
    <string name="clear_cache_no">取消</string>
    <string name="clear_cache_toast">缓存数据清理完毕。</string>


</resources>
