<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/class_07_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/access_alarms" />

            <TextView
                android:id="@+id/class_07_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/class_07_image"
                android:text="@string/class_07" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/class_09_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/access_alarms" />

            <TextView
                android:id="@+id/class_09_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/class_09_image"
                android:text="@string/class_09" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/class_13_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/access_alarms" />

            <TextView
                android:id="@+id/class_13_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/class_13_image"
                android:text="@string/class_13" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/class_17_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/access_alarms" />

            <TextView
                android:id="@+id/class_17_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/class_17_image"
                android:text="@string/class_17" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/stop_detail_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/live_help" />

            <TextView
                android:id="@+id/stop_detail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/stop_detail_image"
                android:text="@string/stop_desc" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:id="@+id/relative_visibility"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/visibility"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/visibility" />

            <TextView
                android:id="@+id/message_zoom_touch_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/visibility"
                android:text="@string/message_zoom_touch_expand" />

        </RelativeLayout>

        <View
            android:id="@+id/view_visibility"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <!-- This is an example layout containing thumbnail image buttons that, when pressed,
            zoom in to show more detail. All of the zooming and animation logic is in
            the ZoomActivity class. -->
        <LinearLayout
            android:id="@+id/linera_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- These buttons don't have any decorations (3D bevel, etc.), but it's still
                important to show feedback on touch or focus. The custom
                "ToughHighlightImageButton" ImageButton subclass helps achieve this by drawing
                the standard system "pressed" and "focused" overlay upon user interaction. -->

            <!--<com.hql.gree2.easternpioneerbus.TouchHighlightImageButton-->
            <!--android:layout_width="48dp"-->
            <!--android:layout_height="48dp"-->
            <!--android:layout_marginLeft="48dp"-->
            <!--android:contentDescription="@string/message_zoom_touch_expand"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:src="@drawable/directions_bus" />-->

            <!--<com.hql.gree2.easternpioneerbus.TouchHighlightImageButton-->
            <!--android:layout_width="48dp"-->
            <!--android:layout_height="48dp"-->
            <!--android:layout_marginLeft="48dp"-->
            <!--android:contentDescription="@string/message_zoom_touch_expand"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:src="@drawable/directions_bus" />-->

        </LinearLayout>

    </LinearLayout>

    <!-- This initially-hidden ImageView will hold the expanded/zoomed version of the
     images above. Without transformations applied, it takes up the entire screen.
     To achieve the "zoom" animation, this view's bounds are animated from the
     bounds of the thumbnail buttons above, to its final laid-out bounds. The implementation
     of this animation is in the ZoomActivity class. -->
    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_zoom_touch_close"
        android:visibility="invisible" />

</FrameLayout>
